# givlocal

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: tests.yml
api/: CONTRIBUTING.md  Dockerfile  Dockerfile.proxy  config.example.yaml  pyproject.toml
api/cloud-data/: settings.json
api/src/givlocal/: __init__.py  auth.py  config.py  database.py  discovery.py  inverter_manager.py  main.py  metrics_store.py  poller.py  settings_map.py  state.py
api/src/givlocal/api/: __init__.py  dependencies.py  devices.py  inverter_control.py  inverter_data.py  pagination.py  presets.py  prometheus.py  schemas.py
api/src/givlocal/cli/: cloud_dump.py
api/src/givlocal/transforms/: __init__.py  data_point.py  meter_data.py  system_data.py
api/tests/: conftest.py  test_auth.py  test_config.py  test_database.py  test_discovery.py  test_e2e.py  test_fixtures.py  test_inverter_manager.py  test_metrics_store.py  test_poller.py  test_settings_map.py
api/tests/fixtures/: register_data.py
api/tests/test_api/: test_devices.py  test_inverter_control.py  test_inverter_data.py  test_pagination.py  test_prometheus.py
api/tests/test_proxy/: test_frame_parser.py
api/tests/test_transforms/: test_meter_data.py  test_system_data.py
app/: pubspec.yaml
app/lib/: theme.dart
settings/models/: hybrid_gen3.yaml
src/givenergy_local/: auth.py  database.py  inverter_manager.py  main.py  poller.py  settings_map.py
src/givlocal/: main.py  (+1 more)
tests/: test_auth.py  test_e2e.py  test_inverter_manager.py  test_poller.py  test_settings_map.py
(+19 files in other folders)
