[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "givlocal"
version = "0.1.0"
description = "Self-hosted replacement for the GivEnergy Cloud API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "givenergy-modbus-async @ git+https://github.com/abedegno/givenergy-modbus-async.git@dev",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27",
    "ruff>=0.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/givlocal"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
